--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "apollo-datasource": "^3.1.0",
     "apollo-server": "^3.3.0",
     "graphql": "^15.5.2",
+    "graphql-constraint-directive": "^2.1.1",
+    "graphql-tools": "^8.2.0",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.2"
