--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowJs": false,
     "experimentalDecorators": true,
     "preserveConstEnums": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitReturns": true,
     "strictNullChecks": true,
     "noUnusedLocals": false,
