feat: upgrade prisma to version 3 new migration

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://ledger:ledger@localhost:5432/ledger?schema=public"
+LEDGER_DATABASE_URL="postgresql://ledger:ledger@localhost:5432/ledger?schema=public"
 NODE_ENV=development
