--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "gen": "graphql-codegen --config codegen.yml",
     "seed:ts": "ts-node --project tsconfig.json ./src/seed.ts",
     "seed": "node ./build/seed.js",
-    "start": "node ./build/index.js",
-    "heroku-postbuild": "./migrate-dev.sh"
+    "start": "node ./build/index.js"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.1.1",
