feat: simplify transaction query

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,22 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch via NPM",
+      "name": "Launch Debugger",
       "request": "launch",
-      "runtimeArgs": ["dev"],
-      "runtimeExecutable": "yarn",
+      "runtimeArgs": [
+        "./node_modules/.bin/ts-node-dev",
+        "--debug",
+        "--transpile-only",
+        "--prefer-ts",
+        "-r",
+        "tsconfig-paths/register"
+      ],
+      "args": ["src/index.ts"],
+      "runtimeExecutable": "node",
       "skipFiles": ["<node_internals>/**"],
-      "type": "pwa-node"
-    },
+      "cwd": "${workspaceRoot}",
+      "type": "node",
+      "envFile": "${workspaceFolder}/.env"
+    }
   ]
 }
