--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "yarn": "1.x"
   },
   "dependencies": {
-    "@prisma/client": "^3.0.2",
+    "@prisma/client": "3.2.1",
     "apollo-datasource": "^3.1.0",
     "apollo-server": "^3.3.0",
     "faker": "^5.5.3",
     "graphql": "^15.5.2",
     "graphql-constraint-directive": "^2.1.1",
     "graphql-tools": "^8.2.0",
-    "prisma": "^3.0.2",
+    "prisma": "3.2.1",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.2"
