--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "src/*": ["src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "src/global.d.ts"],
   "exclude": ["node_modules"]
 }
