--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,11 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
       "name": "Launch Debugger",
       "request": "launch",
       "runtimeArgs": [
-        "./node_modules/.bin/ts-node-dev",
+        "node",
         "--debug",
         "--transpile-only",
         "--prefer-ts",
