--- a/codegen.yml
+++ b/codegen.yml
@@ -1,21 +1,16 @@
-overwrite: true
 schema: "src/schema/schema.graphql"
 documents: null
 generates:
   src/schema/types.generated.ts:
     plugins:
       - "typescript"
-      - typescript-operations
       - "typescript-resolvers"
     config:
       scalars:
         Date: Date
-      useIndexSignature: true # https://github.com/dotansimha/graphql-code-generator/issues/1133
+      useIndexSignature: true
       contextType: ./types#CustomContext
       maybeValue: T | null | undefined
       mappers:
         Reason: ./types#ReasonModel
         Transaction: ./types#TransactionModel
-  src/schema/graphql.schema.json:
-    plugins:
-      - "introspection"
