--- a/package.json
+++ b/package.json
@@ -5,48 +5,39 @@
   "main": "index.js",
   "author": "Toan Nguyen <nta.toan@gmail.com>",
   "license": "MIT",
-  "engines": {
-    "node": "14.x",
-    "yarn": "1.x"
-  },
   "dependencies": {
-    "@prisma/client": "^3.3.0",
+    "@prisma/client": "^3.9.0",
+    "@types/node": "^17.0.13",
     "apollo-datasource": "^3.1.0",
-    "apollo-server": "^3.3.0",
-    "faker": "^5.5.3",
-    "graphql": "^15.5.2",
-    "graphql-constraint-directive": "^2.1.1",
-    "graphql-tools": "^8.2.0",
-    "prisma": "^3.3.0",
-    "ts-node": "^10.2.1",
-    "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.2"
+    "apollo-server": "^3.6.2",
+    "apollo-server-core": "^3.6.2",
+    "apollo-server-express": "^3.6.2",
+    "express": "^4.17.2",
+    "graphql": "^16.3.0",
+    "prisma": "^3.9.0",
+    "ts-node": "^10.4.0",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.5"
   },
   "scripts": {
-    "postinstall": "yarn run gen",
-    "dev": "ts-node-dev --clear --debounce 1300 --prefer-ts -r tsconfig-paths/register src/index.ts",
+    "dev": "ts-node -r tsconfig-paths/register ./src/index.ts",
     "build": "tsc -p . && tscpaths -p tsconfig.json -s ./src -o ./build",
-    "gen": "graphql-codegen --config codegen.yml",
-    "seed:ts": "ts-node --project tsconfig.json ./src/util/seed.ts",
-    "month:ts": "ts-node --project tsconfig.json ./src/util/saveMonth.ts",
-    "seed": "node ./build/util/seed.js",
-    "month": "node ./build/util/saveMonth.ts",
+    "gentype": "graphql-codegen --config codegen.yml",
+    "seed": "ts-node ./src/db/seed.ts",
     "start": "node ./build/index.js",
     "migrate": "prisma migrate dev"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.1.1",
-    "@graphql-codegen/introspection": "2.1.0",
-    "@graphql-codegen/typescript": "2.2.0",
-    "@graphql-codegen/typescript-operations": "^2.1.3",
-    "@graphql-codegen/typescript-resolvers": "2.2.0",
+    "@faker-js/faker": "^6.0.0-alpha.5",
+    "@graphql-codegen/cli": "^2.4.0",
+    "@graphql-codegen/typescript": "^2.4.2",
+    "@graphql-codegen/typescript-resolvers": "^2.4.3",
     "@types/faker": "^5.5.8",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2",
-    "ts-node-dev": "^1.1.8",
     "tscpaths": "^0.0.9"
   }
 }
