--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prisma": "^3.9.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
+    "tscpaths": "^0.0.9",
     "typescript": "^4.5.5"
   },
   "scripts": {
@@ -37,7 +38,6 @@
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.3.2",
-    "tscpaths": "^0.0.9"
+    "prettier": "^2.3.2"
   }
 }
