--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
     - uses: actions/checkout@v2
     - name: Use Node.js 16
       uses: actions/setup-node@v2
@@ -18,6 +19,14 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
+
+  
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+
     - name: Stop web server 
       uses: JimCronqvist/action-ssh@master
       with:
