--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "^4.5.5"
   },
   "scripts": {
-    "dev": "ts-node -r tsconfig-paths/register ./src/index.ts",
+    "dev": "DEBUG=express:* ts-node -r tsconfig-paths/register ./src/index.ts",
     "build": "tsc -p . && tscpaths -p tsconfig.json -s ./src -o ./build",
     "gentype": "graphql-codegen --config codegen.yml",
     "seed": "ts-node ./src/db/seed.ts",
