feat: don't require reason id when creating/updating transaction

--- a/codegen.yml
+++ b/codegen.yml
@@ -1,4 +1,4 @@
-schema: "src/schema/schema.graphql"
+schema: "src/schema/definition.ts"
 documents: null
 generates:
   src/schema/types.generated.ts:
