chore: fix package installation error

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,4 @@
-LEDGER_DATABASE_URL="postgresql://ledger:ledger@localhost:5432/ledger?schema=public"
+LEDGER_DATABASE_URL=postgresql://ledger:ledger@localhost:5432/ledger?schema=public
+LEDGER_KEY=dev.key
+LEDGER_CERT=dev.crt
 NODE_ENV=development
