--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Toan Nguyen <nta.toan@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@faker-js/faker": "^6.0.0-beta.0",
     "@prisma/client": "^3.9.0",
     "@types/node": "^17.0.13",
     "apollo-datasource": "^3.1.0",
@@ -29,11 +30,9 @@
     "migrate": "prisma migrate dev"
   },
   "devDependencies": {
-    "@faker-js/faker": "^6.0.0-alpha.5",
     "@graphql-codegen/cli": "^2.4.0",
     "@graphql-codegen/typescript": "^2.4.2",
     "@graphql-codegen/typescript-resolvers": "^2.4.3",
-    "@types/faker": "^5.5.8",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
