--- a/codegen.yml
+++ b/codegen.yml
@@ -14,3 +14,4 @@ generates:
       mappers:
         Reason: ./types#ReasonModel
         Transaction: ./types#TransactionModel
+        DailyBalance: ./types#DailyBalanceModel
