feat: allow users to sign in user email address'

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,7 @@
 LEDGER_DATABASE_URL=postgresql://ledger:ledger@localhost:5432/ledger?schema=public
 LEDGER_KEY=dev.key
 LEDGER_CERT=dev.crt
+LEDGER_LOGIN=nta.toan@gmail.com
+GMAIL_USER=
+GMAIL_PASS=
 NODE_ENV=development
