--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "apollo-server-express": "^3.6.2",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
+    "nodemailer": "^6.7.2",
     "prisma": "^3.9.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "dev": "DEBUG=express:* ts-node -r tsconfig-paths/register ./src/index.ts",
@@ -33,6 +35,8 @@
     "@graphql-codegen/cli": "^2.4.0",
     "@graphql-codegen/typescript": "^2.4.2",
     "@graphql-codegen/typescript-resolvers": "^2.4.3",
+    "@types/nodemailer": "^6.4.4",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
