--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^3.6.2",
     "apollo-server-core": "^3.6.2",
     "apollo-server-express": "^3.6.2",
+    "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "nodemailer": "^6.7.2",
