refactor: app configuration

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,12 @@
+LEDGER_BACKEND_APP_PORT=3333
 LEDGER_DATABASE_URL=postgresql://ledger:ledger@localhost:5432/ledger?schema=public
-LEDGER_KEY=dev.key
-LEDGER_CERT=dev.crt
-LEDGER_LOGIN=nta.toan@gmail.com
-GMAIL_USER=
-GMAIL_PASS=
+LEDGER_FRONTEND_BASE_URL=http://localhost:3000/
+LEDGER_SSL_KEY=dev.key
+LEDGER_SSL_CERT=dev.crt
+LEDGER_AUTHORIZED_EMAILS=email@email.com,email2@email.com
+LEDGER_SMTP_USER=
+LEDGER_SMTP_PASS=
+LEDGER_SIGNIN_EMAIL_FROM=email@test.com
+LEDGER_SIGNIN_EMAIL_SUBJECT=Ledger Sign In
+LEDGER_SIGNIN_EMAIL_TEMPLATE=<h3>Ledger</h3><p>Please use this link to sign in: {{link}}</p>
 NODE_ENV=development
