--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.2",
     "prisma": "^3.9.0",
     "ts-node": "^10.4.0",
