--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
+    "lru-cache": "^6.0.0",
     "nodemailer": "^6.7.2",
     "prisma": "^3.9.0",
     "ts-node": "^10.4.0",
@@ -37,6 +38,7 @@
     "@graphql-codegen/cli": "^2.4.0",
     "@graphql-codegen/typescript": "^2.4.2",
     "@graphql-codegen/typescript-resolvers": "^2.4.3",
+    "@types/lru-cache": "^7.4.0",
     "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
