--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@faker-js/faker": "^6.0.0-beta.0",
-    "@prisma/client": "^3.9.0",
+    "@prisma/client": "^3.11.0",
     "@types/node": "^17.0.13",
     "apollo-datasource": "^3.1.0",
     "apollo-server": "^3.6.2",
@@ -19,7 +19,6 @@
     "jsonwebtoken": "^8.5.1",
     "lru-cache": "^6.0.0",
     "nodemailer": "^6.7.2",
-    "prisma": "^3.9.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
     "tscpaths": "^0.0.9",
@@ -27,6 +26,7 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "DEBUG=express:* ts-node -r tsconfig-paths/register ./src/index.ts",
     "build": "tsc -p . && tscpaths -p tsconfig.json -s ./src -o ./build",
     "gentype": "graphql-codegen --config codegen.yml",
@@ -45,6 +45,7 @@
     "@typescript-eslint/parser": "^4.30.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "prisma": "^3.11.0"
   }
 }
