--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "apollo-server": "^3.6.2",
     "apollo-server-core": "^3.6.2",
     "apollo-server-express": "^3.6.2",
+    "bcryptjs": "^2.4.3",
     "email-validator": "^2.0.4",
     "express": "^4.17.2",
-    "graphql": "^16.3.0",
+    "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
-    "lru-cache": "^6.0.0",
     "nodemailer": "^6.7.2",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
