--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.2",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
+    "lru-cache": "^7.10.1",
     "nodemailer": "^6.7.2",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
