--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "author": "Toan Nguyen <nta.toan@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@faker-js/faker": "^6.0.0-beta.0",
     "@graphql-tools/schema": "^8.3.12",
     "@prisma/client": "^3.14.0",
     "@types/node": "^17.0.13",
@@ -39,6 +38,7 @@
     "migrate": "prisma migrate dev"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
     "@graphql-codegen/cli": "^2.6.2",
     "@graphql-codegen/typescript": "^2.4.2",
     "@graphql-codegen/typescript-resolvers": "^2.4.3",
