--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@graphql-tools/schema": "^8.3.12",
-    "@prisma/client": "^3.14.0",
+    "@prisma/client": "^4.3.1",
     "@types/node": "^17.0.13",
     "apollo-datasource": "^3.1.0",
     "apollo-server": "^3.6.2",
@@ -30,7 +30,7 @@
   },
   "scripts": {
     "postinstall": "prisma generate | npm run gentype",
-    "dev": "DEBUG=express:* ts-node -r tsconfig-paths/register ./src/index.ts",
+    "dev": "cross-env DEBUG=express:* ts-node -r tsconfig-paths/register ./src/index.ts",
     "start": "node ./build/index.js",
     "build": "tsc -p . && tscpaths -p tsconfig.json -s ./src -o ./build",
     "gentype": "graphql-codegen --config codegen.yml",
@@ -47,9 +47,10 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.3.2",
-    "prisma": "^3.14.0"
+    "prisma": "^4.3.1"
   }
 }
